# tree-sitter-solidity

./: .eslintrc.js  .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  grammar_updates.md  index.d.ts  last_grammar_version.json  package-lock.json  package.json  pre-setup.py  pyproject.toml  setup.py  tree-sitter.json
.claude/: settings.local.json
.claude/agents/: grammar-diff-implementer.md  treesitter-syntax-validator.md
.claude/commands/: grammar-updates.md  implement-updates.md  plan-changes.md
.claude/scripts/: grammar_updater.py
.github/workflows/: helix.yml  node.js.yml  nvim-treesitter.yml  publish-node.yml  publish.yml  release.yml  rust.yml  test.yaml
bindings/c/: tree-sitter-solidity.h  tree-sitter-solidity.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_solidity/: __init__.py  binding.c
bindings/rust/: lib.rs
docs/_site/: index.html
docs/_site/assets/tree-sitter-solidity-1.0.6/: tree-sitter-solidity.wasm
queries/: highlights-nvim.scm  highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
stack-graphs/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
stack-graphs/rust/: bin.rs  lib.rs  test.rs
stack-graphs/src/: stack-graphs.tsg
stack-graphs/test/: test.sol
test/corpus/: block.txt  contract.txt  enums.txt  error.txt  event.txt  expressions.txt  fallback_receive.txt  function.txt  interface.txt  layout.txt  literals.txt  pragma.txt  precedence.txt  state_variable.txt  statements.txt  struct.txt  using.txt  yul.txt
tree_sitter_solidity/: __init__.py  core.py
typed-libraries/python/tree_sitter_solidity/: typed_parser.py
